M-185. Промежуточный результат списка

--- a/preparation-for-lyceums.html
+++ b/preparation-for-lyceums.html
@@ -337,83 +337,98 @@
 				</span>
 			</div>
 
-			<h2 class="main"> 
-				<div class="ck">
-					<img alt="Репетитор по математике готовит к экзамену в лицеи"
-						class="image1"  
-						src="images/photo/preparation-for-lyceums-1.jpg" 
-						title="Репетитор по математике готовит к экзамену в лицеи">
-					<!-- </a> При наличии tab-ов или даже переноса строки - добавляет между фото фиолетовую ссылку длиной в пробел -->
-					<img alt="Подготовка по математике к поступлению в лицей, 9 класс"
-						class="image" 
-						src="images/photo/preparation-for-lyceums-2.jpg" 
-						title="Подготовка по математике к поступлению в лицей, 9 класс">
-				</div>
-				<span class="h21">К 9 классу пора определится с профилем обучения на III ступени –среднего образования
-					(X – XI классы). Для мотивированных детей есть 2 варианта: либо сдать серьезные вступительные экзамены
-					и поступить в лицей, либо по высокому среднему баллу итоговых оценок за 9 класс пройти в сильный
-					профильный класс хорошей гимназии. Подготовку к экзамену по математике при поступлении в лицеи
-					проводит репетитор по математике Игнатьев Игорь Викторович.
-					</span>
-			</h2>
-			<div id="realmain" class="zgt">
-				<h3>1. Лицеи в Минске:</h3>
-				<p class="zgt">
-					После 9 класса учащиеся могут поступить в <em>3 лицея</em> в Минске: лицей им. Ф.Э. Дзержинского БГУ,
-					лицей БНТУ и Минский государственный областной лицей. В последние годы <em>единые экзамены</em> для 
-					поступления  составляет
-					<span class="p1"><a href = "https://rikc.by/licei/696-informacija-o-provedenii-vstupitelnyh-ispytanij-v-x-klass-liceev.html">РИКЗ</a></span>, 
-					разница будет в количестве проходных баллов в зависимости от престижности выбранного лицея и 
-					профилизации. Отмечу, что это серьезное испытание, и готовиться к нему стоит начинать 
-					заблаговременно.
-
-				</p>
-				<h3>2. Вступительный экзамен в лицеи:</h3>
-				<p class="zgt">
-					На протяжении продолжительного времени каждый лицей самостоятельно готовил варианты вступительных экзаменов. Как правило, чем 
-					престижнее был лицей, тем тяжелее вступительные испытания.  Но основная проблема заключалась в том, что при таком подходе всегда 
-					страдала объективность вступительной кампании: появлялись репетиторы, которым заранее известны варианты вступительных испытаний, 
-					становились важными определенные знакомства, финансовые возможности и т.д.
-				</p>
-				<p class="zgt">
-					В 2022 году <em>варианты вступительных экзаменов начал составлять РИКЗ</em>. Экзамен состоит из 10 заданий разного уровня сложности. 
-					Не стоит его путать с выпускным экзаменом в 9 классе. Вступительные испытания сложнее, и задания заранее не известны. 
-					Цель вступительного экзамена – выявить лучших, а не сделать его несложным для многих. Вступительная кампания стала значительно 
-					прозрачней и справедливей. Я бы порекомендовал сдать вступительные испытания хотя бы для того, чтобы <em>оценить свои реальные 
-					знания по математике и сопоставить себя с другими мотивированными учащимися</em>.
-				</p>
-				<p class="zgt">
-					Когда стоит начинать подготовку? <em>Чем раньше, тем лучше</em>. Кашу маслом не испортишь
-					<img src="./images/advantages/smile.png" 
-					alt="tech"
-					style="vertical-align: middle; width: 30px;"> Если ученик, обладающий трудолюбием и определенными 
-					способностями, занимался у меня в 7-м и 8-м классе на <em>углубленном уровне изучения математики</em>, то в 9-м он продолжает работать по привычной 
-					для него схеме. Тот факт, что дополнительно появляются <em>варианты по программе профильного</em>, а затем и углубленного изучения математики на 
-					базе 9 классов, уже не могут его испугать. Периодически встречающиеся <em>олимпиадные задания</em> становятся нормой. Разбираются все вступительные 
-					экзамены прошлых лет, составленные РИКЗ. Проводится <em> повторение, обобщение и систематизация</em> пройденного материала за 9 лет обучения.
-				</p>
-				<p><span class="p1">
-					<a href ="metodika_prepodavania.html">Информация о ценах, ЦТ по русскому, подготовке в зарубежные вузы </a>
-					</span>
-				</p>
-				<!-- <p><span class="p1"> -->
-					<!-- <a href ="metodika_prepodavania.html">Список основных разделов математики и разделов для подготовки к олимпиадам можно узнать на странице </a> -->
-					<!-- </span> -->
-				<!-- </p> -->
-				<p class="zgt">
-					Могу рекомендовать репетитора по физике для подготовки в лицеи.
-				</p>
-				<h3>
-					Литература для подготовки к ЦТ и ЦЭ по математике:
-				</h3>
-				<ul class="zgt">
-					<li>Генденштейн Л. Э. Наглядный справочник по математике с примерами (Илекса)</li>
-					<li>Арефьева И.Г., Пирютко О.Н. Школа юных математиков. Алгебра. 9 класс (Аверсэв)</li>
-					<li>Валаханович Т.В., Шлыков В.В. Геометрия. 9 класс. Самостоятельные и контрольные работы (Аверсэв)</li>
-					<li>Основные учебные материалы предоставляю я</li>
-				</ul>
 		
+			<div class="ck">
+				<img alt="Репетитор по математике готовит к экзамену в лицеи"
+					class="image1"  
+					src="images/photo/preparation-for-lyceums-1.jpg" 
+					title="Репетитор по математике готовит к экзамену в лицеи">
+				<!-- </a> При наличии tab-ов или даже переноса строки - добавляет между фото фиолетовую ссылку длиной в пробел -->
+				<img alt="Подготовка по математике к поступлению в лицей, 9 класс"
+					class="image" 
+					src="images/photo/preparation-for-lyceums-2.jpg" 
+					title="Подготовка по математике к поступлению в лицей, 9 класс">
 			</div>
+			<h3>
+				Варианты подготовки
+			</h3>
+			<p class="zgt"> 
+				К 9 классу пора определится с профилем обучения на III ступени – cреднего образования
+					(X – XI классы).   <br>
+					Для мотивированных детей есть 2 варианта: 
+			</p>
+
+			<ol>
+				<li>либо сдать <em>серьезные вступительные экзамены</em> и поступить в лицей</li>
+				<li>либо по высокому среднему баллу итоговых оценок за 9 класс пройти в <em>сильный профильный класс хорошей гимназии</em>.</li>
+			</ol>
+					
+			<p class="zgt">         
+					Подготовку к экзамену по математике при поступлении в лицеи
+					проводит репетитор по математике Игнатьев Игорь Викторович.
+			</p>
+			<h3>1. Лицеи в Минске:</h3>
+			<p class="zgt">
+				После 9 класса учащиеся могут поступить в <em>3 лицея</em> в Минске:
+			</p>
+			
+			<ul>
+				<li>лицей им. Ф.Э. Дзержинского БГУ</li>
+				<li>лицей БНТУ</li>
+				<li>Минский государственный областной лицей</li>
+			</ul>
+			<p class="zgt">
+				В последние годы <em>единые экзамены</em> для 
+				поступления  составляет
+				<span class="p1"><a href = "https://rikc.by/licei/696-informacija-o-provedenii-vstupitelnyh-ispytanij-v-x-klass-liceev.html">РИКЗ</a></span>, 
+				разница будет в количестве проходных баллов в зависимости от престижности выбранного лицея и 
+				профилизации. Отмечу, что это серьезное испытание, и готовиться к нему стоит начинать 
+				заблаговременно.
+			</p>
+			<h3>2. Вступительный экзамен в лицеи:</h3>
+			<p class="zgt">
+				На протяжении продолжительного времени каждый лицей самостоятельно готовил варианты вступительных экзаменов. Как правило, чем 
+				престижнее был лицей, тем тяжелее вступительные испытания.  Но основная проблема заключалась в том, что при таком подходе всегда 
+				страдала объективность вступительной кампании: появлялись репетиторы, которым заранее известны варианты вступительных испытаний, 
+				становились важными определенные знакомства, финансовые возможности и т.д.
+			</p>
+			<p class="zgt">
+				В 2022 году <em>варианты вступительных экзаменов начал составлять РИКЗ</em>. Экзамен состоит из 10 заданий разного уровня сложности. 
+				Не стоит его путать с выпускным экзаменом в 9 классе. Вступительные испытания сложнее, и задания заранее не известны. 
+				Цель вступительного экзамена – выявить лучших, а не сделать его несложным для многих. Вступительная кампания стала значительно 
+				прозрачней и справедливей. Я бы порекомендовал сдать вступительные испытания хотя бы для того, чтобы <em>оценить свои реальные 
+				знания по математике и сопоставить себя с другими мотивированными учащимися</em>.
+			</p>
+			<p class="zgt">
+				Когда стоит начинать подготовку? <em>Чем раньше, тем лучше</em>. Кашу маслом не испортишь
+				<img src="./images/advantages/smile.png" 
+				alt="tech"
+				style="vertical-align: middle; width: 30px;"> Если ученик, обладающий трудолюбием и определенными 
+				способностями, занимался у меня в 7-м и 8-м классе на <em>углубленном уровне изучения математики</em>, то в 9-м он продолжает работать по привычной 
+				для него схеме. Тот факт, что дополнительно появляются <em>варианты по программе профильного</em>, а затем и углубленного изучения математики на 
+				базе 9 классов, уже не могут его испугать. Периодически встречающиеся <em>олимпиадные задания</em> становятся нормой. Разбираются все вступительные 
+				экзамены прошлых лет, составленные РИКЗ. Проводится <em> повторение, обобщение и систематизация</em> пройденного материала за 9 лет обучения.
+			</p>
+			<p><span class="p1">
+				<a href ="metodika_prepodavania.html">Информация о ценах, ЦТ по русскому, подготовке в зарубежные вузы </a>
+				</span>
+			</p>
+			<!-- <p><span class="p1"> -->
+				<!-- <a href ="metodika_prepodavania.html">Список основных разделов математики и разделов для подготовки к олимпиадам можно узнать на странице </a> -->
+				<!-- </span> -->
+			<!-- </p> -->
+			<p class="zgt">
+				Могу рекомендовать репетитора по физике для подготовки в лицеи.
+			</p>
+			<h3>
+				Литература для подготовки к ЦТ и ЦЭ по математике:
+			</h3>
+			<ul class="zgt">
+				<li>Генденштейн Л. Э. Наглядный справочник по математике с примерами (Илекса)</li>
+				<li>Арефьева И.Г., Пирютко О.Н. Школа юных математиков. Алгебра. 9 класс (Аверсэв)</li>
+				<li>Валаханович Т.В., Шлыков В.В. Геометрия. 9 класс. Самостоятельные и контрольные работы (Аверсэв)</li>
+				<li>Основные учебные материалы предоставляю я</li>
+			</ul>
 		<div class="clear"></div>
 	</div>
 	<div class="clear"></div>
