M-185. Добавлены нумерованные списки

--- a/preparation-for-lyceums.html
+++ b/preparation-for-lyceums.html
@@ -337,7 +337,7 @@
 				</span>
 			</div>
 
-		
+		<div id="realmain" class="zgt">
 			<div class="ck">
 				<img alt="Репетитор по математике готовит к экзамену в лицеи"
 					class="image1"  
@@ -355,28 +355,28 @@
 			<p class="zgt"> 
 				К 9 классу пора определится с профилем обучения на III ступени – cреднего образования
 					(X – XI классы).   <br>
-					Для мотивированных детей есть 2 варианта: 
+					Для мотивированных детей есть <em>2 варианта</em>: 
 			</p>
 
 			<ol>
-				<li>либо сдать <em>серьезные вступительные экзамены</em> и поступить в лицей</li>
-				<li>либо по высокому среднему баллу итоговых оценок за 9 класс пройти в <em>сильный профильный класс хорошей гимназии</em>.</li>
+				<li>Сдать <em>серьезные вступительные экзамены</em> и поступить в лицей.</li>
+				<li>По высокому среднему баллу итоговых оценок за 9 класс пройти в <em>сильный профильный класс хорошей гимназии</em>.</li>
 			</ol>
 					
 			<p class="zgt">         
 					Подготовку к экзамену по математике при поступлении в лицеи
 					проводит репетитор по математике Игнатьев Игорь Викторович.
 			</p>
-			<h3>1. Лицеи в Минске:</h3>
+			<h3>I. Лицеи в Минске:</h3>
 			<p class="zgt">
 				После 9 класса учащиеся могут поступить в <em>3 лицея</em> в Минске:
 			</p>
 			
-			<ul>
-				<li>лицей им. Ф.Э. Дзержинского БГУ</li>
-				<li>лицей БНТУ</li>
+			<ol>
+				<li>Лицей им. Ф.Э. Дзержинского БГУ</li>
+				<li>Лицей БНТУ</li>
 				<li>Минский государственный областной лицей</li>
-			</ul>
+			</ol>
 			<p class="zgt">
 				В последние годы <em>единые экзамены</em> для 
 				поступления  составляет
@@ -385,7 +385,7 @@
 				профилизации. Отмечу, что это серьезное испытание, и готовиться к нему стоит начинать 
 				заблаговременно.
 			</p>
-			<h3>2. Вступительный экзамен в лицеи:</h3>
+			<h3>II. Вступительный экзамен в лицеи:</h3>
 			<p class="zgt">
 				На протяжении продолжительного времени каждый лицей самостоятельно готовил варианты вступительных экзаменов. Как правило, чем 
 				престижнее был лицей, тем тяжелее вступительные испытания.  Но основная проблема заключалась в том, что при таком подходе всегда 
@@ -429,6 +429,7 @@
 				<li>Валаханович Т.В., Шлыков В.В. Геометрия. 9 класс. Самостоятельные и контрольные работы (Аверсэв)</li>
 				<li>Основные учебные материалы предоставляю я</li>
 			</ul>
+		</div>
 		<div class="clear"></div>
 	</div>
 	<div class="clear"></div>
