M-185. Добавлен атрибут в ссылку

--- a/preparation-for-lyceums.html
+++ b/preparation-for-lyceums.html
@@ -380,7 +380,7 @@
 			<p class="zgt">
 				В последние годы <em>единые экзамены</em> для 
 				поступления  составляет
-				<span class="p1"><a href = "https://rikc.by/licei/696-informacija-o-provedenii-vstupitelnyh-ispytanij-v-x-klass-liceev.html">РИКЗ</a></span>, 
+				<span class="p1"><a target="_blank" href = "https://rikc.by/licei/696-informacija-o-provedenii-vstupitelnyh-ispytanij-v-x-klass-liceev.html">РИКЗ</a></span>, 
 				разница будет в количестве проходных баллов в зависимости от престижности выбранного лицея и 
 				профилизации. Отмечу, что это серьезное испытание, и готовиться к нему стоит начинать 
 				заблаговременно.
