--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<a class="blink" href="mestopolozhenie.html">Местоположение и контакты</a><br>
 					<a class="blink" href="shkolnikam.html">Математика для школьников</a><br>
 					<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
-					<a class="blink" href="metodika_prepodavania.html">Подготовка в лицеи</a><br>
+					<a class="blink" href="preparation-for-lyceums.html">Подготовка в лицеи</a><br>
 					<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 					<a class="blink" href="mathematics-for-professionals.html">Математика для взрослых</a><br>
 					<a class="blink" href="pomosch_reshenii_zadach.html">Онлайн репетитор</a><br>
