M-207. Updated menu on all other than index.html files

--- a/russian-language-tutor-reviews.html
+++ b/russian-language-tutor-reviews.html
@@ -46,12 +46,12 @@
 					<a class="blink" href="about.html">Информация о репетиторе</a><br>
 					<a class="blink" href="otzivi.html">Отзывы и комментарии</a><br>
 					<a class="blink" href="mestopolozhenie.html">Местоположение и контакты</a><br>
-					<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
-					<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 					<a class="blink" href="shkolnikam.html">Математика для школьников</a><br>
+					<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
+					<a class="blink" href="preparation-for-lyceums.html">Подготовка в лицеи</a><br>
+					<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 					<a class="blink" href="mathematics-for-professionals.html">Математика для взрослых</a><br>
 					<a class="blink" href="pomosch_reshenii_zadach.html">Онлайн репетитор</a><br>
-					<a class="blink" href="metodika_prepodavania.html">Подготовка в лицеи</a><br>
 					<a class="blink" href="russian-language-tutor.html">Репетитор по русскому языку</a><br>
 				</div>
 			</div>
@@ -65,12 +65,12 @@
 						<a class="blink" href="about.html">Информация о репетиторе</a><br>
 						<a class="blink" href="otzivi.html">Отзывы и комментарии</a><br>
 						<a class="blink" href="mestopolozhenie.html">Местоположение и контакты</a><br>
-						<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
-						<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 						<a class="blink" href="shkolnikam.html">Математика для школьников</a><br>
+						<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
+						<a class="blink" href="preparation-for-lyceums.html">Подготовка в лицеи</a><br>
+						<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 						<a class="blink" href="mathematics-for-professionals.html">Математика для взрослых</a><br>
 						<a class="blink" href="pomosch_reshenii_zadach.html">Онлайн репетитор</a><br>
-						<a class="blink" href="metodika_prepodavania.html">Подготовка в лицеи</a><br>
 						<a class="blink" href="russian-language-tutor.html">Репетитор по русскому языку</a><br>
 					</div>
 				</details>
