M-185. Made small corrections at lyceums page

--- a/shkolnikam.html
+++ b/shkolnikam.html
@@ -441,7 +441,7 @@
                     </p>
                 </div>
 
-                <div class="b3">
+                <div id="b3" class="b3">
                     <p class="zgt"><strong>Условия:</strong></p>
                     <ul>
                         <li>
