--- a/preparation-for-lyceums.html
+++ b/preparation-for-lyceums.html
@@ -409,19 +409,22 @@
 				базе 9 классов, уже не могут его испугать. Периодически встречающиеся <em>олимпиадные задания</em> становятся нормой. Разбираются все вступительные 
 				экзамены прошлых лет, составленные РИКЗ. Проводится <em> повторение, обобщение и систематизация</em> пройденного материала за 9 лет обучения.
 			</p>
-			<p><span class="p1">
-				<a href ="metodika_prepodavania.html">Информация о ценах, ЦТ по русскому, подготовке в зарубежные вузы </a>
-				</span>
-			</p>
-			<!-- <p><span class="p1"> -->
-				<!-- <a href ="metodika_prepodavania.html">Список основных разделов математики и разделов для подготовки к олимпиадам можно узнать на странице </a> -->
-				<!-- </span> -->
-			<!-- </p> -->
+
 			<p class="zgt">
-				Могу рекомендовать репетитора по физике для подготовки в лицеи.
+				Информацию об условиях, ценах, формате и количестве занятий при подготовке в лицеи по математике смотрите в пунктах 3-5 на странице - 
+				<a href="shkolnikam.html#b3">математика для школьников</a>
+			</p>
+
+			<p class="zgt">
+				Список основных разделов математики и разделов для подготовки к олимпиадам можно узнать на странице -   
+				<a href="math-9th-class.html">репетитор по математике для 9 класса</a>
+			</p>
+ 
+			<p class="zgt">
+				Могу порекомендовать репетитора по физике для подготовки в лицеи.
 			</p>
 			<h3>
-				Литература для подготовки к ЦТ и ЦЭ по математике:
+				Литература для подготовки к экзамену в лицеи по математике:
 			</h3>
 			<ul class="zgt">
 				<li>Генденштейн Л. Э. Наглядный справочник по математике с примерами (Илекса)</li>
