M-217. Added lyceums page to site_map.html and updated date to date of release

--- a/site_map.html
+++ b/site_map.html
@@ -346,6 +346,10 @@
 						<a class="blink" href="shkolnikam.html">Школьникам</a>
 					</p>
 					<p class="zgt">
+						<a class="blink" href="preparation-for-lyceums.html">Подготовка в лицеи</a>
+					</p>
+
+					<p class="zgt">
 						<a class="blink" href="math-4th-class.html">4-й класс</a>
 					</p>
 					<p class="zgt">
